--- a/client/src/template.html
+++ b/client/src/template.html
@@ -9,7 +9,7 @@
 
     <title>WorkerBook</title>
     <meta name="apple-mobile-web-app-title" content="WorkerBook" />
-    <meta name="theme-color" content="#00bb55" />
+    <meta name="theme-color" content="#33b400" />
   </head>
 
   <body>
